--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,68 +1,78 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+    background-color: #131212;
+    color: white;
+}
+
+.app-container {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-top: 10%;
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+    font-weight: 500;
+    font-size: 48px;
+    margin: 0;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+h2 {
+    font-weight: 400;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+h3 {
+    font-weight: 300;
+}
+
+form {
+    margin-bottom: 4%;
+}
+
+.inputfield {
+    margin-top: 2%; 
+    padding: 10px;
+    background-color: #131212;
+    border: solid;
+    border-color: white;
+    border-radius: 2.5px;
+    border-width: 1px;
+    color: white;
+}
+
+.inputfield:focus {
+    outline: none;
+}
+
+.container {
+    display: flex;
+    border: solid;
+    border-color: white;
+    border-radius: 10px;
+    border-width: 2px;
+    margin-bottom: 2%;
+}
+
+.preview {
+    width: 200px;
+    height: auto;
+    margin-right: 10px;
+    object-fit: contain;
+}
+
+.info {
+    margin-right: 10px;
+    overflow-wrap: break-word;
+    width: 1000px;
+}
+
+.delete {
+    color: white;
+    cursor: pointer;
+    background-color: #DC4C64;
+    border: none;
+    border-width: 1px;
+    border-radius: 4px;
+    margin-bottom: 6px;
+    margin-left: 90%
 }
